--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -195,7 +195,7 @@
             </objects>
             <point key="canvasLocation" x="-1318" y="-1696"/>
         </scene>
-        <!--Worked Well-->
+        <!--Worked Well?-->
         <scene sceneID="gXS-0a-svG">
             <objects>
                 <viewController id="CIG-ox-MP6" customClass="NEGBestPracticesWWWViewController" sceneMemberID="viewController">
@@ -214,7 +214,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Worked Well" id="Am1-bG-CUV">
+                    <navigationItem key="navigationItem" title="Worked Well?" id="Am1-bG-CUV">
                         <barButtonItem key="backBarButtonItem" title="Back" id="e6I-wy-Zxm"/>
                     </navigationItem>
                     <connections>
@@ -392,6 +392,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="0.33000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="KEw-u5-XfR">
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell tag="555" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="nameInput" rowHeight="85" id="f6T-1D-10b">
                                 <rect key="frame" x="0.0" y="86" width="320" height="85"/>
@@ -608,6 +612,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="0.33000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="FNu-tv-N8e">
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="instructions" rowHeight="125" id="GUm-G4-bTa">
                                 <rect key="frame" x="0.0" y="86" width="320" height="115"/>
@@ -940,7 +948,7 @@
                                             <rect key="frame" x="8" y="7" width="304" height="30"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                             <state key="normal" title="Tap Here to Revise Your Scorecard">
-                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="titleColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -949,7 +957,7 @@
                                         </button>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -1540,7 +1548,7 @@
                                             <rect key="frame" x="8" y="7" width="304" height="30"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                             <state key="normal" title="Tap Here to Revise Your Profile">
-                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="titleColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -1549,7 +1557,7 @@
                                         </button>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.90588235289999997" green="0.52549019610000003" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -1960,7 +1968,7 @@
             </objects>
             <point key="canvasLocation" x="908" y="1716"/>
         </scene>
-        <!--Do Differently-->
+        <!--Do Differently?-->
         <scene sceneID="aTr-rX-Mtq">
             <objects>
                 <viewController id="bT9-IB-NZy" customClass="NEGBestPracticesWWIDViewController" sceneMemberID="viewController">
@@ -1979,7 +1987,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Do Differently" id="yl4-Ke-gm4">
+                    <navigationItem key="navigationItem" title="Do Differently?" id="yl4-Ke-gm4">
                         <barButtonItem key="backBarButtonItem" title="Back" id="75L-dv-67w"/>
                     </navigationItem>
                     <connections>
@@ -2070,11 +2078,11 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oFu-12-oe6"/>
+        <segue reference="oA1-ch-634"/>
+        <segue reference="72D-xW-IWS"/>
         <segue reference="TxM-el-1ZU"/>
         <segue reference="rig-AL-udf"/>
-        <segue reference="72D-xW-IWS"/>
-        <segue reference="oA1-ch-634"/>
+        <segue reference="oFu-12-oe6"/>
         <segue reference="CDr-fM-Uml"/>
         <segue reference="JhG-7d-thQ"/>
         <segue reference="9hR-Rc-zEg"/>
